# myos

./: CMakeLists.txt  LICENSE  README.txt  build-rpi.sh  disasm-kernel.sh  disasm-raw.sh  gdb-howto.txt  go.sh  qemu-rpi2.sh  toolchain-arm-none-eabi-rpi.cmake  update.sh
boot/: CMakeLists.txt  boot-rpi1.S  boot-rpi2.S  boot.S  clib.h  exmode.h  interrupt.h  itoa.c  kernel.c  platform-rpi1.S  platform-rpi2.S  strlen.c  vector.S  vector.h
cmake/: objcopy_file.cmake
docs/: README.txt  arm.txt  manual.txt  rpi.txt
firmware/: CONFIG.TXT
fonts/: 8x16.bdf  README.txt
ldscripts/arm-none-eabi-rpi/: default.lds
tools/: README.txt
